--- a/pom.xml
+++ b/pom.xml
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url> http://172-31-17-73:8081/repository/paypal-releases/</url>
+	      <url> http://172.31.17.73:8081/repository/paypal-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://172-31-17-73:8081/repository/paypal-snapshots/</url>
+	      <url>http://172.31.17.73:8081/repository/paypal-snapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
